manifests/components/mni-mc/0.2.4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mni-mc-ingress
spec:
  rules:
    - host: hostname.replacethis
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mni-mc-main
                port:
                  number: 80
  tls:
    - hosts:
        - hostname.replacethis
      secretName: mni-mc-cert
